fpp_analysis/src/test/redef/state_machine.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/state_machine.fpp:2:15
  |
2 | state machine S
  |               ^ redefinition of symbol S
  |
 ::: [ local path prefix ]/redef/state_machine.fpp:1:1
  |
1 | state machine S
  | --------------- previous definition is here

